@@ -52,6 +52,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status
 - bug #2890451 [setup] Inconsistent generated "designer_coords"
 - bug #2890443 [mysqli] "No index used in query" exception is reported 
+- bug #2891250 [ob] Garbled data in navi frame (PHP 5.2.11 bug)
 
 3.2.3.0 (2009-10-30)
 - patch #2856664 [export] Date, time, and datetime column types now export correctly to
